@@ -1,6 +1,7 @@
 5d (0.2.2) unstable; urgency=low
 
   * add abstraction and application selectors.
+  * support byte order in packRecord and unpackRecord.
 
  -- Danny Milosavljevic <danny_milo@yahoo.com>  Thu, 05 Jan 2012 12:13:00 +0100
 
